Sat Apr 30 11:18:47 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* vm_trace.c: Fix typos. [ci skip]

Sat Apr 30 10:09:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/pty/pty.c (establishShell): honor USER environment variable
	  and login name over uid, one pid can be shared by some login
	  names.

Fri Apr 29 22:40:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/maintainers.rdoc (ext/io/nonblock): still maintained, as
	  well as ext/io/wait, which is the origin.

Fri Apr 29 21:18:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* doc/maintainers.rdoc (ext/win32): of course, it's still maintained.

Fri Apr 29 21:03:10 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: Update latest gems, test-unit-3.1.8 and rake-11.1.2.

Fri Apr 29 20:43:02 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/maintainers.rdoc: Update latest maintainers list on Ruby 2.4

Fri Apr 29 19:52:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/maintainers.rdoc: Removed deprecated entries. These are already deleted.

Fri Apr 29 19:48:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/maintainers.rdoc: Removed Ruby 1.8 entries. It's not necessary to
	  Ruby 2.4 or later.

Thu Apr 28 17:03:17 2016  Nicholas Maccharoli  <nmaccharoli@gmail.com>

	* hash.c (rb_hash_update_{block,func}_callback): dry up hash
	  update callback code.  [Fix GH-1338]

Thu Apr 28 16:52:05 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_prepare_enc): use rb_enc_asciicompat(enc) instead of
	  rb_enc_str_asciicompat_p(str) to avoid useless rb_enc_get(str) call.

Thu Apr 28 16:33:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb: [DOC] fix example code.  base on the code by
	  Semyon Gaivoronskiy in [ruby-core:75224].  [Bug #12323]

Thu Apr 28 09:33:03 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems-2.6.4.
	  Please see entries of 2.6.4 on